issue resolved priority graph not visible

--- a/src/components/dashboard/subComponents/dashboard.css
+++ b/src/components/dashboard/subComponents/dashboard.css
@@ -23,20 +23,19 @@
 }
 
 .status-boxes-div {
-    width: 90%;
+    width: 100%;
     display: flex;
-    /* justify-content: center; */
-    margin-left: 10px;
-    gap: 30px;
+    align-items: center;
+    justify-content:space-between;
+    gap: 25px;
     margin-top: 25px;
 }
 
 .chart-and-pinned-div {
-    width: 90%;
-    margin-left: 10px;
-    display: flex;
+    justify-content: center;
+    width: 100%;
+    display:flex;
     gap: 24px;
-
     margin-top: 24px;
 
 }
@@ -46,14 +45,11 @@
     height: 446px;
     padding: 20px 14px 20px 2px;
     background-color: white;
-    border-radius: 12px;
 }
 
 .pie-chart-div {
-    width: 403px;
     height: 446px;
     padding: 20px 14px 20px 2px;
     background-color: white;
-    border-radius: 12px;
 }
 
